[package]
name = "orderbook-engine"
version = "0.1.0"
edition = "2024"


[[bin]]
name = "server"
path = "src/main.rs"


[dependencies]
axum = { version = "0.8.8", features = ["ws"] }
tokio = { version = "1.51.0", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
tower-http = { version = "0.6.2", features = ["cors", "trace"] }
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }
anyhow = "1.0.102"
futures-util = "0.3.32"
